# Process this file with autoconf to produce a configure script.
AC_INIT(Common.mk.in)
AC_CONFIG_SRCDIR([Common.mk.in])
AC_CONFIG_HEADER([config.h])

AC_CANONICAL_HOST
case $host in
    *-*-osx*)
        # A bogus warning that nobody cares about.
        SYSWARNS="-Wno-long-double"
	;;
    *-*-solaris*)
	# Because system headers are screwed up.
        SYSWARNS="-Wno-redundant-decls"
	;;
    *)
        SYSWARNS=""
	;;
esac
AC_SUBST(SYSWARNS)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_CHECK_PROG(AR,ar,ar)
AC_CHECK_PROG(RM,rm,rm -f)
AC_CHECK_PROG(LN,ln,ln -sf,cp)
AC_CHECK_PROG(HEAD,head,head)
AC_CHECK_PROG(TAIL,tail,tail)
AC_CHECK_PROG(DIFF,diff,diff)
AC_CHECK_PROG(DOXYGEN,doxygen,doxygen)

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h float.h limits.h memory.h stddef.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SIGNAL
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_STRTOD
AC_FUNC_STAT
AC_CHECK_FUNCS([atexit strtol memchr memmove memset strrchr strsignal])

AC_CONFIG_FILES([Common.mk])
AC_OUTPUT

